3 septemper video cutter included

--- a/flask/css/Portfolio/index.html
+++ b/flask/css/Portfolio/index.html
@@ -3,28 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="D:\python\flask\css\Portfolio\style.css"
+    <title>Document</title>
+    <link rel="stylesheet" href="D:\python\flask\css\Portfolio\style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-    <h1 id="something"> Suraj Bhandari</h1>
-    <div>
-        <p id="first paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, non esse quidem voluptate deleniti fugiat, quae voluptas rem earum maiores cumque recusandae debitis nihil sapiente eos? Asperiores reiciendis aliquid modi.</p>
+    <div class="Header">
+        <a href="#" id="Name"> Suraj</a>
+        <a href="#" id="Projects">Projects</a>
+        <a href="#" id="About_Me">About Me</a>
+        <a href="#" id="Blogs">Blogs</a>
+        <a href="#" id="Contact_Me">Contact Me</a>
+        
     </div>
-    <div id="div1">
-        <p> Hello hello hello</p>
+        <div id="intro"> 
+            <h1 id="Name_intro"> Hi, It's Suraj Bhandari.</h1>
+            <p id="rest_intro"> I am a student persuing B.Tech in Thapar Institute of Engineering and Technology. I will be an expert data scientist in next 10 years.
+                I have a deep interest in AI/ML mainly the deep learning is love.
+            </p>
+            <div><p class="options"> 
+                <a href="#" id="Recent_Blogs"> Recent Blogs</a>
+                <a href="#" id="Video_Resume"> Watch My Video Resume</a>
+            </p></div>
+        
+        </div>
+        <div id="photo"> </div>
+    <div class="social">
+        <a href="#" id="facebook"> </a>
+        <a href="#" id="twitter"></a>
+        <a href="#" id="linkedin"> </a>
+        </a>
     </div>
-    <div id="div2">
-        <p> How are you?</p>
-    </div>
-    <div>
-        <p id="whatever"> hello</p>
-        <a id="1"> </a>
-        <a id="2"> </a>
-        <a id="3"> </a>
-        <a id="4"> </a>
-        <a id="5"> </a>
-
-    </div>
+<div id="footer">
+<p> ALL rights reserved</p>
+</div>
 </body>
 </html>
